--- a/LetsDoReactJs/PizzaBotManager/bower.json
+++ b/LetsDoReactJs/PizzaBotManager/bower.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "jquery": "3.2.1",
-    "bootstrap": "3.3.7"
+    "bootstrap": "3.3.7",
+    "Font-Awesome": "4.7.0",
+    "jquery.appear.js": "0.3.6"
   }
 }
