--- a/LetsDoReactJs/PizzaBotManager/PizzaBotManager.csproj
+++ b/LetsDoReactJs/PizzaBotManager/PizzaBotManager.csproj
@@ -5,7 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Content Include="wwwroot\lib\animate.css" />
+    <Content Include="wwwroot\lib\jquery\src\queue\traversing\findFilter.js" />
+    <Content Include="wwwroot\lib\jquery\src\queue\traversing\var\dir.js" />
+    <Content Include="wwwroot\lib\jquery\src\queue\traversing\var\rneedsContext.js" />
+    <Content Include="wwwroot\lib\jquery\src\queue\traversing\var\siblings.js" />
+    <Content Include="wwwroot\lib\modernizr.customII.js" />
+    <Content Include="wwwroot\lib\ReactJs\PizzaBotManager.jsx" />
+    <Content Include="wwwroot\lib\ReactJs\test.jsx" />
+    <Content Include="wwwroot\lib\script.js" />
+    <Content Include="wwwroot\lib\style.css" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
